--- a/src/index.css
+++ b/src/index.css
@@ -7,21 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 img {
-  width: 300px;
+  /* width: 300px;
   height: 300px;
-  object-fit: cover;
+  object-fit: cover; */
+  height: 300px;
+  padding: 20px;
+  background: #fff;
+  margin: auto;
 }
 
 .card-title {
   text-overflow: ellipsis;
-
-  /* Required for text-overflow to do anything */
   white-space: nowrap;
   overflow: hidden;
 }
